syntax = "proto3";

package at.fhj.swengb.apps.battleship;

option java_package         = "at.fhj.swengb.apps.battleship";
option java_outer_classname = "BattleShipProtobuf";


message active {
    bool status = 1;
    bool ready = 2;
}

message Games {
        BattleShipGame player1Game = 1;
        BattleShipGame player2Game = 2;
        string player1Name = 3;
        string player2Name = 4;
        string gameName = 5;
}

message BattleShipGame {
    BattleField battlefield = 1;
    repeated BattlePos order = 2;
}

message BattleField {
    int32 width = 1;
    int32 height = 2;
    Fleet fleet = 3;
}

message Fleet {
    repeated Vessel vessels = 1;
}

message Vessel {
    string name = 1;
    BattlePos startPos = 2;
    Direction direction = 3;
    int32 size = 4;
}

message BattlePos {
    int32 x = 1;
    int32 y = 2;
}

enum Direction {
    Horizontal = 0;
    Vertical = 1;
}